; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_kobj.c_kobj_get_filesize_loader.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/compat/opensolaris/kern/extr_opensolaris_kobj.c_kobj_get_filesize_loader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._buf = type { i32 }

@MODINFO_SIZE = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct._buf*, i64*)* @kobj_get_filesize_loader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kobj_get_filesize_loader(%struct._buf* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct._buf*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i8*, align 8
  store %struct._buf* %0, %struct._buf** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load %struct._buf*, %struct._buf** %4, align 8
  %8 = getelementptr inbounds %struct._buf, %struct._buf* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @MODINFO_SIZE, align 4
  %11 = call i8* @preload_search_info(i32 %9, i32 %10)
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* @ENOENT, align 4
  store i32 %15, i32* %3, align 4
  br label %21

16:                                               ; preds = %2
  %17 = load i8*, i8** %6, align 8
  %18 = bitcast i8* %17 to i64*
  %19 = load i64, i64* %18, align 8
  %20 = load i64*, i64** %5, align 8
  store i64 %19, i64* %20, align 8
  store i32 0, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %14
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i8* @preload_search_info(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
